# tuberesearch

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml
tuberesearch/: __init__.py  cli.py  pure.py  search.py  summarize.py  telegram_bot.py  transcript.py
