[project]
name = "tuberesearch"
version = "0.1.0"
description = "YouTube research agent: search, transcribe, summarize, rank for any topic"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "requests>=2.31.0",
    "youtube-transcript-api>=0.6.2",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
tuberesearch = "tuberesearch.cli:main"
tuberesearch-pure = "tuberesearch.pure:main"
tuberesearch-telegram = "tuberesearch.telegram_bot:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tuberesearch*"]
